# rev_reactor_incremental

./: .gitignore  AGENTS.md  README.md  build_cloudflare.sh  build_web.sh  pyproject.toml
documentation/knowledge-base/: INDEX.md  PROJECT_STRUCTURE.md  bevy-implementation-status.md  click-events.md  componenttype-layout.md  core-method-index-map.md  experimental-fuel-cells.md  extreme-components.md  game-tick.md  implementation-notes.md  method-name-hints.md  prestige-system.md  stat-id-map.md  ui-decompilation-notes.md  ui-strings.md  wasm-decompilation-notes.md
documentation/plans/: BEVY_TRANSLATION_PLAN.md  PROJECT_PLAN.md
ghidra_scripts/: Il2CppDumperWasmAuto.java
implementation/: layout.json  requirements.txt
implementation/src/: assets.py  main.py  raylib_compat.py  save_export.txt
implementation_bevy/: .gitignore  Cargo.toml  README.md
implementation_bevy/src/: lib.rs  main.rs
implementation_bevy/src/app/: input.rs  mod.rs  resources.rs  setup.rs  simulation.rs  state.rs  view.rs
implementation_bevy/src/core/: mod.rs  resource_store.rs  simulation.rs
implementation_bevy/src/data/: component_types.rs  loader.rs  mod.rs  upgrade_data.rs
implementation_bevy/src/model/: component.rs  grid.rs  mod.rs
implementation_bevy/src/save/: bridge.rs  codec.rs  mod.rs  model.rs
implementation_bevy/tests/: deterministic_core.rs
scripts/: make_sprite_sheet.py  split_sprite_sheet.py  sprites_sheet_map.json  ui_sheet_map.json
web/: changelog.js  changelog.txt  game.html  index.html  input.js  loader.js  manifest.json  renderer.js  style.css
(+37 files in other folders)
